css/stylesheet.css
:root {
    --nav-height: 80vh;
    --main-width: -100vw;
    --main-margin-top: 0px;
    --main-margin-right: 12px; /* Set 'main-margin-right' manually! */
    --main-padding: 0px; /* Is assigned with 'padding-right' values*/
    --socials-width: -12px; /* To provide a good fallback layout set 'socials-width' to -('main-margin-right')! */
  }
  
  * {
      margin: 0;
      padding: 0;
      box-sizing: border-box;
  }
  
  html, body {
      min-width: 358px;
      margin: 0;
      padding: 0;
      font-family: "DM Sans", sans-serif;
      font-optical-sizing: auto;
      font-weight: 300;
      font-style: normal;
      color: #333;
      background-color: #f4f4f4;
      text-align: left;
  }

  #spiderweb {
      position: fixed;
      top: 0;
      left: 0;
      width: 100vw;
      height: 100vh;
      z-index: -1;  /* ensure it stays behind your content */
  }
  
  #navbar {
      position: sticky;
      top: 0;
      z-index: 1000;
  }
  
  nav {
      min-width: 358px;
      height: auto;
      margin: 0 5px;
      padding: 15px;
      border-radius: 0 0 12px 12px;
      box-shadow: 0px 0px 10px rgba(0.1, 0.1, 0.1, 0.2);
      background-color: #333;
      display: flex;
      justify-content: center;
      flex-wrap: wrap;
  }
  
  nav a {
      margin: 15px;
      font-size: 24px;
      color: #f4f4f4;
      text-decoration: none;
      white-space: nowrap;
      transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
  }
  
  nav a:hover {
      color: #957bb5;
      transform: scale(0.95);
  }

  nav a.active {
      color: #957bb5;
  }
  
  main {
      min-width: 358px;
      max-width: 800px;
      height: auto;
      margin: 15px auto;
      padding: 15px;
      border-radius: 8px;
      box-shadow: 0px 0px 10px rgba(0, 0, 0.1, 0.3);
      word-wrap: break-word;
      overflow-wrap: break-word;
      white-space: normal;
  }
  
  .socials {
      padding: 5px;
      border-radius: inherit;
      box-shadow: inherit;
      position: fixed;
      top: calc(var(--nav-height) + var(--main-margin-top));
      left: calc(50vw + (var(--main-width) / 2) + var(--main-margin-right));
      z-index: 100;
      display: inline-flex;
      flex-direction: column;
  }
  
  .socials a {
      margin: 5px 0;
      color: #333;
      text-decoration: none;
      transition: color 0.1s ease-in-out, transform 0.1s ease-in-out;
  }
  
  .socials a:hover {
      color: var(--hover-color, #957bb5);
      transform: scale(0.91) rotate(5deg);
  }
  
  .socials a i {
      font-size: 28px;
  }
  
  #portfolio-overview {
      display: flex;
      align-items: flex-start;
      justify-content: space-between;
      flex-wrap: wrap;
      padding: 15px;
  }
  
  #portfolio-overview > #portfolio-info-box {
      position: relative;
      margin-right: 15px;
      margin-bottom: 15px;
      padding: 7px 0 7px 10px;
  }
  
  #portfolio-overview > #portfolio-info-box::before {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      width: 5px;
      height: 100%;
      background-color: #957bb5;
      mask-image: linear-gradient(to bottom, transparent, #fff 30%, #fff 70%, transparent);
      -webkit-mask-image: linear-gradient(to bottom, transparent, #fff 30%, #fff 70%, transparent);
  }
  
  .profile-image {
      margin-bottom: 30px;
      width: 100%;
      max-width: 225px;
      min-width: 112px;
      height: auto;
      border-radius: 15%;
      box-shadow: 0px 0px 12px rgba(0.584, 0.482, 0.710, 0.4);
      border: 3px solid transparent;
      transition: border-width 0.3s ease-in-out, border-color 0.3s ease-in-out, transform 0.3s ease-in-out;
  }

  .profile-image:hover {
      border-width: 3px;
      border-color: #957bb5;
      transform: scale(0.97) rotate(-7deg);
}
  
  #portfolio-experience {
      padding: 20px;
      margin: auto;
      margin-bottom: 15px;
      border-radius: 8px;
      box-shadow: inherit;
      width: 85%;
  }
  
  .tab-button-container {
      border-radius: 30px;
      box-shadow: 0px 0px 12px rgba(0.584, 0.482, 0.710, 0.4);
      background-color: #333;
      display: flex;
      justify-content: space-between;
      overflow: hidden;
  }
  
  .tab-button {
      background-color: #333;
      color: #f4f4f4;
      flex: 1;
      padding: 10px;
      border: none;
      font-size: 24px;
      cursor: pointer;
      transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
  }
  
  .tab-button:not(.active):hover {
      color: #957bb5;
      transform: scale(0.92);
  }
  
  .tab-button.active {
      color: #957bb5;
      border-radius: inherit;
      border: 3px solid #957bb5;
  }
  
  .tab-content {
      display: none;
      padding: 15px;
  }
  
  .tab-content.active {
      display: block;
  }
  
  /* Media Queries */
  
  @media (max-width: 1000px) {
      main {
          max-width: 80vw;
      }
  }
  
  @media (max-width: 540px) {
      main {
          width: 100%;
          max-width: 100vw;
          margin: 15px 0;
          padding: 4px;
          border-radius: 0px;
      }

      .socials {
          border-radius: 8px;
          box-shadow: 0px 0px 10px rgba(0.1, 0.1, 0.1, 0.2);
          top: calc(var(--nav-height) + var(--main-margin-top) + var(--main-padding));
          left: calc(50vw + (var(--main-width) / 2) - var(--main-padding) - var(--socials-width));
          background-color: #333;
          flex-direction: row-reverse;
      }
  
      .socials a {
          margin: 0 5px;
          color: #f4f4f4;
      }
  
      .socials a i {
          font-size: 24px;
      }

      #portfolio-overview > #portfolio-info-box {
          margin-right: 0;
          padding-left: 0;
      }
  
      #portfolio-overview > #portfolio-info-box::before {
          width: 0;
      }      
  }
  
  /* TODO Sections */
  #portfolio-skills {
      padding: 20px;
      margin: auto;
      margin-bottom: 15px;
      border-radius: 8px;
      box-shadow: inherit;
      width: 85%;
      text-align: center;
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
      gap: 10px;
      justify-items: center;
  }

  .skill-item {
    display: flex;
    flex-direction: row;
    align-items: center;
    background: #333;
    padding: 5px;
    border-radius: 4px;
    box-shadow: inherit;
    transition: transform 0.2s ease-in-out;
}

  .skill-item:hover {
      transform: scale(1.1);
  }
  
  .skill-item img {
      width: 50px;
      height: 50px;
  }
  
  .skill-item p {
      font-size: 14px;
      color: #f4f4f4;
  }
  
  #portfolio-projects {
    display: flex;
  }
  

